# monorepo-test

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  release-please-config.json
.github/workflows/: publish.yml  release-please.yml
package-docs/: .pdm.toml  pyproject.toml
package-docs/docs/: conf.py  index.md
package_a/: .pdm.toml  CHANGELOG.md  README.md  pyproject.toml
package_a/docs/: conf.py  index.md
package_a/src/package_a/: __init__.py
package_b/: .pdm.toml  CHANGELOG.md  README.md  pyproject.toml
package_b/docs/: conf.py  index.md
package_b/src/package_b/: __init__.py
