[project]
name = "package_a"
version = "0.3.6"
description = "\"Let's pretend this was already pre-loaded\""
authors = [
    {name = "Kai Norman Clasen", email = "k.clasen@protonmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
