[project]
name = "package_a"
version = "0.3.6"
description = "\"Let's pretend this was already pre-loaded\""
authors = [
    {name = "Kai Norman Clasen", email = "k.clasen@protonmail.com"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
docs = [
    "-e file:///${PROJECT_ROOT}/../package-docs#egg=package-docs",
]
